Adiciona serviço Redis ao docker-compose, configurando persistência de dados e dependência de saúde para o serviço de reconhecimento facial. Atualiza healthcheck do serviço facial e ajusta o período de inicialização.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
 services:
-  facial-recognition:
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  face-recognition:
     build: .
     ports:
       - "8080:5000"
@@ -9,10 +22,16 @@ services:
     environment:
       - FLASK_ENV=production
       - FLASK_APP=app.py
+    depends_on:
+      redis:
+        condition: service_healthy
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/"]
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 60s
+
+volumes:
+  redis_data:
