--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,11 @@ services:
     environment:
       - FLASK_ENV=production
       - FLASK_APP=app.py
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
+      - AWS_S3_REGION=${AWS_S3_REGION:-us-east-1}
+      - STATIC_CDN=${STATIC_CDN}
     depends_on:
       redis:
         condition: service_healthy
