--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Dependências principais
 Flask==2.3.3
 opencv-python==4.8.1.78
 Pillow==10.0.1
@@ -8,5 +9,7 @@ faiss-cpu==1.7.4
 onnxruntime==1.16.3
 scikit-learn==1.3.2
 redis==5.0.1
+
+# Dependências opcionais (S3 como diferencial)
 boto3==1.34.0
 python-dotenv==1.0.0
